--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@coreui/vue-chartjs": "^3.0.0",
     "@tailwindcss/vite": "^4.1.10",
     "chart.js": "^4.5.0",
     "nuxt": "^3.17.5",
